added vault to personal site

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://github.com/nikolamarunic/Vault" class="image featured"><img src="images/vaultlogo.png" alt="" /></a>
+								<h3><a href="https://github.com/nikolamarunic/Vault">Vault</a></h3>
+								<h4>React, Django, SQLite, Bootstrap, Docker</h4>
+								<p>Web app created to help users remember where important things are, intended for use by the elderly. Used to learn Django 
+									as well as Bootstrap and to practice react.
+								</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://github.com/nikolamarunic/TD-Webbroker-investment-calculator" class="image featured"><img src="images/Calculator_splash.png" alt="" /></a>
 								<h3><a href = "https://github.com/nikolamarunic/TD-Webbroker-investment-calculator">TD Webbroker Command Line Investing Tool</a></h3>
 								<h4>Python, openpyxl</h4>
