updated resume and job

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<h1>Hi. I'm <strong>Nikola Marunic</strong>.</h1>
 							</header>
 							<p>I'm a <strong>Student</strong> and <strong>Developer.</strong></p>
-							<p>	Currently I am based in Toronto and study here at UofT.  </p>
+							<p>	Currently I am working on the DevOps team at AMD and am studying at the University of Toronto.  </p>
 							<a href="#portfolio" class="button large scrolly">See some of my projects!</a>
 						</div>
 					</div>
